--- a/.classpath
+++ b/.classpath
@@ -25,16 +25,16 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/com.fasterxml.jackson.databind.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/com.fasterxml.jackson.core.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/apache-logging-log4j.jar"/>
-	<classpathentry kind="lib" path="D:/Jars/java-json.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_211">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_144">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/shubham.shingate/Downloads/java-json.jar/java-json.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
