--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,7 +1,7 @@
 DBDriver = oracle.jdbc.driver.OracleDriver
 DBConnectURL = jdbc:oracle:thin:@10.254.8.137:1521:CustomDb
 DBConnectUserName = axisdbusr
-DBConnectPassword= Password123
+DBConnectPassword= ******
 
 RuleQuery = SELECT * from DL_MASTERULETABLE ORDER BY RULE_ID ASC
 MTQuery = SELECT * FROM DL_MT700 WHERE TRANSCTIONID = ?
